<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:background="@color/main_background">

    <RelativeLayout
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:background="#f5e1d7"
        android:layout_height="55dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="65sp"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/name_header_main"
            android:textColorHint="#112A46"
            android:textSize="22sp" />


        <ImageButton
            android:id="@+id/toggle_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/sections_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:onClick="goOnDirection"
                android:text="@string/directions"
                android:textColorHint="#112A46"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:onClick="goOnPeriod"
                android:text="@string/period"
                android:textColorHint="#112A46"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:onClick="goOnLevel"
                android:text="@string/level"
                android:textColorHint="#112A46"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:onClick="goOnMovement"
                android:text="@string/movements"
                android:textColorHint="#112A46"
                android:textSize="22sp" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
