<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HatFragment"
    android:id="@+id/fragment_hat">

    <RelativeLayout
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:background="#80FFE2E2"
        android:layout_height="55dp"
        >
        <TextView
            android:id="@+id/txtMain"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="65sp"
            android:layout_marginTop="10sp"
            android:text="@string/name_header_main"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/philosopher"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goOnMain"
            />


        <ImageButton
            android:id="@+id/toggle_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/sections_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goOnDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:onClick="goOnDirection"
                android:text="@string/directions"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:fontFamily="@font/philosopher"/>

            <TextView
                android:id="@+id/goOnPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginBottom="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:onClick="goOnPeriod"
                android:text="@string/period"
                android:textColor="@color/white"
                android:fontFamily="@font/philosopher"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/goOnLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:layout_marginBottom="5dp"
                android:onClick="goOnLevel"
                android:text="@string/level"
                android:textColor="@color/white"
                android:fontFamily="@font/philosopher"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/goOnMoves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start"
                android:layout_marginBottom="5dp"
                android:onClick="goOnMoves"
                android:text="@string/movements"
                android:textColor="@color/white"
                android:fontFamily="@font/philosopher"
                android:textSize="22sp" />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>