<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/period"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".period">
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:background="#f5e1d7"
        android:layout_height="55dp"
        >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="65dp"
          android:layout_marginStart="65sp"
          android:layout_marginTop="15sp"
          android:text="@string/name_header_main"
          android:fontFamily="@font/segoeui"
          android:textColorHint="#112A46"
          android:textSize="22sp" />


      <ImageButton
          android:id="@+id/toggle_button"
          android:layout_width="45dp"
          android:layout_height="45dp"
          android:layout_marginStart="10sp"
          android:layout_marginTop="10sp"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:onClick="onClick"
          android:scaleType="fitCenter"
          android:src="@drawable/menu"
          tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

      <LinearLayout
          android:id="@+id/sections_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="60dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:onClick="goOnDirection"
            android:text="@string/directions"
            android:fontFamily="@font/segoeui"
            android:textColorHint="#112A46"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:onClick="goOnPeriod"
            android:text="@string/period"
            android:fontFamily="@font/segoeui"
            android:textColorHint="#112A46"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:onClick="goOnLevel"
            android:text="@string/level"
            android:fontFamily="@font/segoeui"
            android:textColorHint="#112A46"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:onClick="goOnMovement"
            android:text="@string/movements"
            android:fontFamily="@font/segoeui"
            android:textColorHint="#112A46"
            android:textSize="22sp" />

      </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="50dp"
          android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Периоды"
            android:textSize="60sp"
            android:layout_marginStart="90dp"
            android:fontFamily="@font/monotypecorsiva"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

          <androidx.cardview.widget.CardView
              android:id="@+id/card_middleAges"
              android:onClick="goOnMovement"
              android:layout_width="180dp"
              android:layout_height="180dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"

              >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginBottom="50dp"
                android:src="@drawable/mideval"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/mideval"
                android:fontFamily="@font/monotypecorsiva"
                android:textSize="30sp" />
          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:id="@+id/card_eightAges"
              android:onClick="goOnMovement"
              android:layout_width="180dp"
              android:layout_height="180dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/eighteen"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/eighteen"
                android:fontFamily="@font/monotypecorsiva"
                android:textSize="30sp" />
          </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">
          <androidx.cardview.widget.CardView
              android:id="@+id/card_nineAges"
              android:onClick="goOnMovement"
              android:layout_width="180dp"
              android:layout_height="180dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginBottom="50dp"
                android:src="@drawable/nineteen"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/nineteen"
                android:fontFamily="@font/monotypecorsiva"
                android:textSize="30sp" />

          </androidx.cardview.widget.CardView>
          <androidx.cardview.widget.CardView
              android:id="@+id/card_twentyAges"
              android:onClick="goOnMovement"
              android:layout_width="180dp"
              android:layout_height="180dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginBottom="50dp"
                android:src="@drawable/twenty"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/twenty"
                android:fontFamily="@font/monotypecorsiva"
                android:textSize="30sp" />
          </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">
          <androidx.cardview.widget.CardView
              android:id="@+id/card_twentyOneAges"
              android:onClick="goOnMovement"
              android:layout_width="180dp"
              android:layout_height="180dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
              >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginBottom="50dp"
                android:src="@drawable/twentyone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/twentyone"
                android:fontFamily="@font/monotypecorsiva"
                android:textSize="30sp" />

          </androidx.cardview.widget.CardView>

        </LinearLayout>
      </LinearLayout>
    </ScrollView>
  </FrameLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>