<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/levels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".levels">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/header_main"
            android:layout_width="match_parent"
            android:background="#f5e1d7"
            android:layout_height="55dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="65sp"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/name_header_main"
                android:textColorHint="#112A46"
                android:textSize="22sp" />


            <ImageButton
                android:id="@+id/toggle_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:src="@drawable/menu"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:id="@+id/sections_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start"
                    android:onClick="goOnDirection"
                    android:text="@string/directions"
                    android:textColorHint="#112A46"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start"
                    android:onClick="goOnPeriod"
                    android:text="@string/period"
                    android:textColorHint="#112A46"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start"
                    android:onClick="goOnLevel"
                    android:text="@string/level"
                    android:textColorHint="#112A46"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start"
                    android:onClick="goOnMovement"
                    android:text="@string/movements"
                    android:textColorHint="#112A46"
                    android:textSize="22sp" />

            </LinearLayout>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/monotypecorsiva"
                    android:text="Сложность"
                    android:textSize="60sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_light"
                    android:layout_width="300dp"
                    android:layout_height="235dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="goOnMovement"
                   >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:paddingBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/light" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="183dp"
                        android:fontFamily="@font/monotypecorsiva"
                        android:gravity="center"
                        android:text="@string/light"
                        android:textSize="39sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_mid"
                    android:layout_width="300dp"
                    android:layout_height="235dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="goOnMovement">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:paddingBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/middle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="183dp"
                        android:fontFamily="@font/monotypecorsiva"
                        android:gravity="center"
                        android:text="@string/middle"
                        android:textSize="39sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_hard"
                    android:layout_width="300dp"
                    android:layout_height="235dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="goOnMovement">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:paddingBottom="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hard" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="183dp"
                        android:fontFamily="@font/monotypecorsiva"
                        android:gravity="center"
                        android:text="@string/hard"
                        android:textSize="39sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>